--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,6 @@ PyMuPDF==1.18.14
 # pdf2image==1.16.0
 fitz~=0.0.1.dev2
 pathlib~=1.0.1
+
+# Requirements for autoClickonScreen application
+pyautogui
